--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<maven.compiler.target>12</maven.compiler.target>
   	</properties>
   
+
   
   	<dependencies>
 		<dependency>
@@ -22,7 +23,19 @@
     		<artifactId>log4j</artifactId>
     		<version>1.2.17</version>
 		</dependency>
+
+		<dependency>
+	    	<groupId>com.betbrain.sportsengine</groupId>
+	    	<artifactId>SEPC-connector</artifactId>
+	    	<version>3.1.1</version>
+	    	<scope>system</scope>
+	    	<systemPath>${project.basedir}\Jars\SEPC-connector-3.1.1.jar</systemPath>
+		</dependency>
+
 	</dependencies>
+	
+	
+	
 	
 	<build>
 	
