--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 	    	<groupId>com.betbrain.sportsengine</groupId>
 	    	<artifactId>SEPC-connector</artifactId>
 	    	<version>3.1.1</version>
-	    	<scope>system</scope>
-	    	<systemPath>${project.basedir}\Jars\SEPC-connector-3.1.1.jar</systemPath>
+			<scope>system</scope>
+	    	<systemPath>${basedir}/src/main/resources/lib/SEPC-connector-3.1.1.jar</systemPath>
 		</dependency>
 
 	</dependencies>
@@ -41,12 +41,27 @@
 	
 		<finalName>BetBrainScrapperAPI_${project.version}</finalName>
 	
+	
+	
+	
+	
 		<plugins>
+
+			<plugin>
+			  <groupId>org.springframework.boot</groupId>
+			  <artifactId>spring-boot-maven-plugin</artifactId>
+			  <version>2.1.5.RELEASE</version>
+			  
+			  <configuration>
+			    <includeSystemScope>true</includeSystemScope>
+			  </configuration>
+			</plugin>
 
 			<!-- Plugin for assembly -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
+					<includeSystemScope>true</includeSystemScope>
 					<archive>
 						<manifest>
 							<mainClass>com.ubaid.Masenko_Project_Betbrain_API_MainClass</mainClass>
